i GOTTA chill on JBS
bruh i been doing this nonstop like i haven't even opened chrome yet like HELP

--- a/JBS3.vcxproj
+++ b/JBS3.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="console2.h" />
     <ClInclude Include="Direct2D.h" />
     <ClInclude Include="guicon.h" />
+    <ClInclude Include="JBS3.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
