--- a/JBS3.vcxproj.filters
+++ b/JBS3.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClInclude Include="Direct2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JSTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="jbs3.ico">
