--- a/JBS3.vcxproj
+++ b/JBS3.vcxproj
@@ -122,7 +122,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;V8_COMPRESS_POINTERS;V8_31BIT_SMIS_ON_64BIT_ARCH;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)v8\include;$(ProjectDir)v8\;$(ProjectDir)libuv\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)v8\include;$(ProjectDir)v8\;$(ProjectDir)libuv\include;$(ProjectDir)libuv\src</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -147,6 +147,7 @@
     <ClInclude Include="Direct2D.h" />
     <ClInclude Include="guicon.h" />
     <ClInclude Include="JSTimer.h" />
+    <ClInclude Include="JSWindow.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
