--- a/JBS3.vcxproj.filters
+++ b/JBS3.vcxproj.filters
@@ -49,6 +49,9 @@
     <ClInclude Include="JSTimer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JSWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="jbs3.ico">
