don't expect nothing much yet (except DllCall)
a d2d overhaul is upon us but not yet LO! (oh yeah i forgot to mention but im working on an opengl canvas option too so STAY ON THE LOOKOUT)
we bout to have conway's game of life in Direct2D AND OpenGL (and maybe just maybe in Direct3D)

i made DllCall a while ago (like idk last week) but i never pushed it because it's lowkey not very good (and i don't feel like using autohotkey's version because it seems HELLA complicated (and i thought mine would work))
floats completely destroyed my whole operation with DllCall and i might have to give up with that one

don't be scared of WindowsTools it's just a random dll i made for a unity project based on my botgame (who knew you could load native dlls in unity)
also don't mind the function names in WindowsTools idk how they got there (plus im black)

--- a/JBS3.vcxproj
+++ b/JBS3.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="console2.h" />
     <ClInclude Include="Direct2D.h" />
+    <ClInclude Include="DllCall.h" />
     <ClInclude Include="guicon.h" />
     <ClInclude Include="JSTimer.h" />
     <ClInclude Include="JSWindow.h" />
