--- a/JBS3.vcxproj.filters
+++ b/JBS3.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClInclude Include="JSWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DllCall.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="jbs3.ico">
