getting SPICY now (probably don't use this build)
yeah JBS is getting crazy but probably don't use this build because i'm barely done wit it and im only uploading it so i can update all the d2d examples at school (since my change with WIC has no doubt broken them all)

anyways in the next update all the d2d examples will be fixed and you will be able to load pngs as HBITMAPS in WicToHBITMAP.js

--- a/JBS3.vcxproj
+++ b/JBS3.vcxproj
@@ -136,8 +136,10 @@
   <ItemGroup>
     <ClCompile Include="console2.cpp" />
     <ClCompile Include="Direct2D.cpp" />
+    <ClCompile Include="goodmacrosfordirect2dandwichelper.h" />
     <ClCompile Include="guicon.cpp" />
     <ClCompile Include="JBS3.cpp" />
+    <ClCompile Include="WICHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="bababooey.rc" />
@@ -150,6 +152,7 @@
     <ClInclude Include="JSTimer.h" />
     <ClInclude Include="JSWindow.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="WICHelper.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="jbs3.ico" />
