--- a/JBS3.vcxproj.filters
+++ b/JBS3.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="Direct2D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WICHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="goodmacrosfordirect2dandwichelper.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="bababooey.rc">
@@ -53,6 +59,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DllCall.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WICHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
