--- a/JBS3.vcxproj
+++ b/JBS3.vcxproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <ClCompile Include="console2.cpp" />
     <ClCompile Include="Direct2D.cpp" />
+    <ClCompile Include="GL\glew.c" />
     <ClCompile Include="goodmacrosfordirect2dandwichelper.h" />
     <ClCompile Include="guicon.cpp" />
     <ClCompile Include="JBS3.cpp" />
@@ -148,6 +149,10 @@
     <ClInclude Include="console2.h" />
     <ClInclude Include="Direct2D.h" />
     <ClInclude Include="DllCall.h" />
+    <ClInclude Include="GL\eglew.h" />
+    <ClInclude Include="GL\glew.h" />
+    <ClInclude Include="GL\glxew.h" />
+    <ClInclude Include="GL\wglew.h" />
     <ClInclude Include="guicon.h" />
     <ClInclude Include="JSTimer.h" />
     <ClInclude Include="JSWindow.h" />
