made manimation, controlsend doesn't work, and d2d11 barely added
yeah when i tried using ControlSend on roblox nothing happened so im just gonna assume it's over for that

it took a while but i made a good enough animation with manim (my first time using it) to explain why my memory was skyrocketing with cloneherowiitartoosu.js

the reason i'm saying that d2d11 is barely added is because despite me adding directcomposition shits, you can't create and use d2d effects (which is a big reason why i wanted d2d11)

--- a/JBS3.vcxproj
+++ b/JBS3.vcxproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <ClCompile Include="console2.cpp" />
     <ClCompile Include="Direct2D.cpp" />
+    <ClCompile Include="Direct2D11.cpp" />
     <ClCompile Include="GL\glew.c" />
     <ClCompile Include="goodmacrosfordirect2dandwichelper.h" />
     <ClCompile Include="guicon.cpp" />
@@ -149,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="console2.h" />
     <ClInclude Include="Direct2D.h" />
+    <ClInclude Include="Direct2D11.h" />
     <ClInclude Include="DllCall.h" />
     <ClInclude Include="GL\eglew.h" />
     <ClInclude Include="GL\glew.h" />
