--- a/JBS3.vcxproj.filters
+++ b/JBS3.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="hidapi\hid.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Direct2D11.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="bababooey.rc">
@@ -95,6 +98,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="hidapi\hidapi_cfgmgr32.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Direct2D11.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
