oops forgot to commit this yesterday ignore Canvas2DRenderingContext

--- a/JBS3.vcxproj.filters
+++ b/JBS3.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Direct2D11.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Canvas2DRenderingContext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="bababooey.rc">
@@ -101,6 +104,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Direct2D11.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Canvas2DRenderingContext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
