--- a/JBS3.vcxproj
+++ b/JBS3.vcxproj
@@ -134,6 +134,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Canvas2DRenderingContext.cpp" />
     <ClCompile Include="console2.cpp" />
     <ClCompile Include="Direct2D.cpp" />
     <ClCompile Include="Direct2D11.cpp" />
@@ -148,6 +149,7 @@
     <ResourceCompile Include="bababooey.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Canvas2DRenderingContext.h" />
     <ClInclude Include="console2.h" />
     <ClInclude Include="Direct2D.h" />
     <ClInclude Include="Direct2D11.h" />
