added easytab.h but realized i can't use it
yeah nah i have an XP-PEN and not WACOM so im gonna find another way hopefully?
unfortunately blender doesn't have all the third party type credits like Clone Hero did when i was trying to find out they recognized my guitar (some hidapi lib for C#)

--- a/JBS3.vcxproj
+++ b/JBS3.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="Direct2D.h" />
     <ClInclude Include="Direct2D11.h" />
     <ClInclude Include="DllCall.h" />
+    <ClInclude Include="easytab.h" />
     <ClInclude Include="GL\eglew.h" />
     <ClInclude Include="GL\glew.h" />
     <ClInclude Include="GL\glxew.h" />
