awesome marshalling + random
lowkey forgot to commit some earlier changes from like 2 days ago or something (just opencv/win32dropfilesvideosupport.js)

as you can see from dllstuffs/random.js  im on the verge of adding shit about themes (this is the first time i've even heard about them(es) and about comctl32 and the pragma comment manifest).

i like jbs3 and all but damn it takes forever to add the shit im tryna do it's like i got a job like i need break days 😂

themes coming soon + shadereditor.js (and a few bad apple things (low chance of bapple?))

--- a/JBS3.vcxproj
+++ b/JBS3.vcxproj
@@ -131,6 +131,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>$(ProjectDir)v8\out\x64.release\d8.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <DelayLoadDLLs>comctl32.dll</DelayLoadDLLs>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
